--- a/index.html
+++ b/index.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Toboolist</title>
+    <link rel="stylesheet" href="./css/style.css"> <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> <title>Toboolist</title>
 </head>
 <body>
-    
+    <header class="white-bg">
+        <div class=".header-div">
+            <img class="central-img" src="./img/Logo.png" alt="Logo Boolean">
+            <h1>Toboolist</h1>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <!-- add section -->
+            <div>
+                <!-- <button></button>
+                <input type="text"> -->
+            </div>
+            <!-- fine add section -->
+            <div class="central">
+                <!-- new task -->
+                <!-- fine new task -->
+
+                <!-- date -->
+                <!-- fine date -->
+
+                <!-- upcoming -->
+                <!-- fine upcoming -->
+
+
+            </div>
+
+
+        </div>       
+    </main>
 </body>
 </html>
