add buttons ul to index html and rules to style css

--- a/index.html
+++ b/index.html
@@ -16,18 +16,27 @@
         </div>
     </header>
     <main>
-        <div class="container">
+        <div class="container white-bg">
             <!-- add section -->
-            <div>
-                <!-- <button></button>
-                <input type="text"> -->
+            <div class="add">
+                <button class="bg-blue white b-rad">Add task</button>
+                <button class="white-bg b-rad">Add section</button>
             </div>
             <!-- fine add section -->
             <div class="central">
                 <!-- new task -->
+                <ul> <h3 class="list-title">&#9662; New Task</h3>
+                    <li>Quarterly Newsletter <div class="bg-blue">Editorial</div></li>
+                </ul>
                 <!-- fine new task -->
 
                 <!-- date -->
+                <ul> <h3 class="list-title">&#9662; Today</h3>
+                    <li>Recruiting blog post <div class="bg-blue">Editorial</div></li>
+                    <li>Mobile app luaunch <div class="bg-purple">Q1 Goals</div></li>
+                    <li>Interview John. H <div class="bg-green">Recruiting</div></li>
+                    <li>Submit update to mobiile storfronts <div class="bg-orange">Mobile</div></li>
+                </ul>
                 <!-- fine date -->
 
                 <!-- upcoming -->
