add last ul to index html and style css

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                 <!-- fine date -->
 
                 <!-- upcoming -->
+                <ul> <h3 class="list-title">&#9662; Upcoming</h3>
+                    <li>Scheduled meeting with Alex</li>
+                    <li>Homepage refreshh <div class="bg-pink">Website</div></li>
+                    <li>Homeboard New sales team members <div class="bg-lightgreen">Sales</div></li>
+                    <li>Submit update to mobiile storfronts <div class="bg-blue">Editorial</div></li>
+                </ul>
                 <!-- fine upcoming -->
 
 
