--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
             <!-- fine add section -->
             <div class="central">
                 <!-- new task -->
-                <ul> <h3 class="list-title">&#9662; New Task</h3>
-                    <li>Quarterly Newsletter <div class="bg-blue">Editorial</div></li>
+                <ul> <h3>&#9662; New Task</h3>
+                    <li><div class="circle green">&check;</div>Quarterly Newsletter <div class="bg-blue badges">Editorial</div></li>
                 </ul>
                 <!-- fine new task -->
 
                 <!-- date -->
-                <ul> <h3 class="list-title">&#9662; Today</h3>
-                    <li>Recruiting blog post <div class="bg-blue">Editorial</div></li>
-                    <li>Mobile app luaunch <div class="bg-purple">Q1 Goals</div></li>
-                    <li>Interview John. H <div class="bg-green">Recruiting</div></li>
-                    <li>Submit update to mobiile storfronts <div class="bg-orange">Mobile</div></li>
+                <ul> <h3>&#9662; Today</h3>
+                    <li><div class="circle green">&check;</div>Recruiting blog post <div class="bg-blue badges">Editorial</div></li>
+                    <li><div class="circle green">&check;</div>Mobile app luaunch <div class="bg-purple badges">Q1 Goals</div></li>
+                    <li><div class="circle red">&cross;</div>Interview John. H <div class="bg-green badges">Recruiting</div></li>
+                    <li><div class="circle green">&check;</div>Submit update to mobiile storfronts <div class="bg-orange badges">Mobile</div></li>
                 </ul>
                 <!-- fine date -->
 
                 <!-- upcoming -->
-                <ul> <h3 class="list-title">&#9662; Upcoming</h3>
-                    <li>Scheduled meeting with Alex</li>
-                    <li>Homepage refreshh <div class="bg-pink">Website</div></li>
-                    <li>Homeboard New sales team members <div class="bg-lightgreen">Sales</div></li>
-                    <li>Submit update to mobiile storfronts <div class="bg-blue">Editorial</div></li>
+                <ul> <h3 >&#9662; Upcoming</h3>
+                    <li><div class="circle red">&cross;</div>Scheduled meeting with Alex</li>
+                    <li><div class="circle green">&check;</div>Homepage refreshh <div class="bg-pink badges">Website</div></li>
+                    <li><div class="circle green">&check;</div>Homeboard New sales team members <div class="bg-lightgreen badges">Sales</div></li>
+                    <li><div class="circle green">&check;</div>Submit update to mobiile storfronts <div class="bg-blue badges">Editorial</div></li>
                 </ul>
                 <!-- fine upcoming -->
 
