fixed h3 position to index htmls

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
             <!-- fine add section -->
             <div class="central">
                 <!-- new task -->
-                <ul> <h3>&#9662; New Task</h3>
+                <h3>&#9662; New Task</h3>
+                <ul> 
                     <li><div class="circle green">&check;</div>Quarterly Newsletter <div class="bg-blue badges">Editorial</div></li>
                 </ul>
                 <!-- fine new task -->
 
                 <!-- date -->
-                <ul> <h3>&#9662; Today</h3>
+                <h3>&#9662; Today</h3>
+                <ul> 
                     <li><div class="circle green">&check;</div>Recruiting blog post <div class="bg-blue badges">Editorial</div></li>
                     <li><div class="circle green">&check;</div>Mobile app luaunch <div class="bg-purple badges">Q1 Goals</div></li>
                     <li><div class="circle red">&cross;</div>Interview John. H <div class="bg-green badges">Recruiting</div></li>
@@ -40,7 +42,8 @@
                 <!-- fine date -->
 
                 <!-- upcoming -->
-                <ul> <h3 >&#9662; Upcoming</h3>
+                <h3 >&#9662; Upcoming</h3>
+                <ul> 
                     <li><div class="circle red">&cross;</div>Scheduled meeting with Alex</li>
                     <li><div class="circle green">&check;</div>Homepage refreshh <div class="bg-pink badges">Website</div></li>
                     <li><div class="circle green">&check;</div>Homeboard New sales team members <div class="bg-lightgreen badges">Sales</div></li>
